projects page alignment correction for mobile, adding outline of projects

--- a/portfolio.css
+++ b/portfolio.css
@@ -41,7 +41,7 @@ p {
     position: fixed;
     justify-content: center;
     align-content: center;
-    /* position: fixed; */
+    position: fixed;
     background-color: #353238;
     width: 100vw;
     height: 8vh;
